--- a/8_wilcoxon/src/average_maps.Rmd
+++ b/8_wilcoxon/src/average_maps.Rmd
@@ -7,19 +7,17 @@ editor_options:
 
 ```{r setup, warning=FALSE}
 knitr::opts_chunk$set(warning = FALSE, message = FALSE) 
-knitr::opts_knit$set(root.dir = "/Users/letitiaho/src/talker_change_data_processing/8_tests/")
+knitr::opts_knit$set(root.dir = "/Users/letitiaho/src/talker_change_data_processing/8_wilcoxon/")
 setwd("/Users/letitiaho/src/talker_change_data_processing/")
 library("dplyr")
 library("ggplot2")
 library("ggpubr")
 library("kableExtra")
 source("tools/functions.R")
-source("8_tests/src/functions.R")
-```
+source("8_wilcoxon/src/functions.R")
 
-```{r}
 # Import data
-load("data/wilcoxon_results.RData")
+load("8_wilcoxon/data/wilcoxon_results.RData")
 ```
 
 #### One-sample t-tests for overall tracking
@@ -186,7 +184,7 @@ nodiff_nonsense <- get_ps(one_sample_w, "N", nodiff_meaning_channels)
 meaning_df <- data.frame(group1 = meaningful, group2 = nonsense, nodiff_group1 = nodiff_meaning, nodiff_group2 = nodiff_nonsense, coordinates)
 
 # Plot
-plot <- get_map(meaning_df, meaning_channels, nodiff_meaning_channels, c("Meaningful", "Nonsense"))
+plot <- get_map(meaning_df, meaning_channels, nodiff_meaning_channels, c("Nonsense", "Meaningful"))
 plot
 ggsave(plot = plot, filename = 'figs/meaning.png', width = 12, height = 5)
 ```
@@ -208,7 +206,7 @@ nodiff_high <- get_ps(one_sample_w, "H", nodiff_constraint)
 constraint_df <- data.frame(group1 = low, group2 = high, nodiff_group1 = nodiff_low, nodiff_group2 = nodiff_high, coordinates)
 
 # Plot
-plot <- get_map(constraint_df, constraint_channels, nodiff_constraint, c("Low constraint", "High constraint"))
+plot <- get_map(constraint_df, constraint_channels, nodiff_constraint, c("High constraint", "Low constraint"))
 plot
 ggsave(plot = plot, filename = 'figs/constraint.png', width = 12, height = 5)
 ```
