Try to save dict as matlab file

--- a/7_coherence/src/getF0s.ipynb
+++ b/7_coherence/src/getF0s.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 23,
    "id": "392f21f9",
    "metadata": {},
    "outputs": [],
@@ -13,14 +13,15 @@
     "import statistics\n",
     "import numpy as np\n",
     "import pandas as pd\n",
+    "import scipy.io as sio\n",
     "from typing import Dict, Iterator, Iterable\n",
     "from parselmouth.praat import call"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "bbdde490",
+   "execution_count": 2,
+   "id": "765ffb80",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "id": "2b951836",
    "metadata": {},
    "outputs": [],
@@ -144,6 +145,8 @@
     "        yield acc / count\n",
     "        \n",
     "def getPitchForOneStim(file):\n",
+    "#     sound = parselmouth(file)\n",
+    "    \n",
     "    # Get pitches across utterance\n",
     "    pitch_values = measurePitch(file)\n",
     "    \n",
@@ -163,6 +166,18 @@
     "        stim_pitches[file.split('/')[-1]] = syllable_pitches\n",
     "        \n",
     "    return stim_pitches"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "d89eeaa8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.chdir('/Users/letitiaho/src/talker_change_data_processing')\n",
+    "stim_pitches = getPitchForAllStim('0_set_up_and_raw_data/data/stim/low_pass_400/*.wav')\n",
+    "sio.savemat('7_coherence/data/syllable_pitches.mat', stim_pitches)"
    ]
   }
  ],
