Save stim pitches dict as .json

--- a/7_coherence/src/getF0s.ipynb
+++ b/7_coherence/src/getF0s.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "id": "392f21f9",
    "metadata": {},
    "outputs": [],
@@ -11,6 +11,7 @@
     "import glob\n",
     "import os\n",
     "import statistics\n",
+    "import json\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import scipy.io as sio\n",
@@ -34,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "id": "2b951836",
    "metadata": {},
    "outputs": [],
@@ -144,9 +145,7 @@
     "    if count:\n",
     "        yield acc / count\n",
     "        \n",
-    "def getPitchForOneStim(file):\n",
-    "#     sound = parselmouth(file)\n",
-    "    \n",
+    "def getPitchForOneStim(file):    \n",
     "    # Get pitches across utterance\n",
     "    pitch_values = measurePitch(file)\n",
     "    \n",
@@ -166,6 +165,19 @@
     "        stim_pitches[file.split('/')[-1]] = syllable_pitches\n",
     "        \n",
     "    return stim_pitches"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "bb09711c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.chdir('/Users/letitiaho/src/talker_change_data_processing')\n",
+    "stim_pitches = getPitchForAllStim('0_set_up_and_raw_data/data/stim/low_pass_400/*.wav')\n",
+    "with open('7_coherence/data/stim_pitches.json', 'w') as fp:\n",
+    "    json.dump(stim_pitches, fp)"
    ]
   }
  ],
